# youtubei-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: community.rs  endpoints.rs  extractors.rs  lib.rs  query.rs  tests.rs  utils.rs
src/api/: endpoints.rs  extractors.rs  mod.rs  query.rs
src/client/: client.rs  clientTypes.rs  client_types.rs  mod.rs
src/models/: channel.rs  error.rs  filter.rs  misc.rs  mod.rs  playlist.rs
src/types/: accessibility.rs  category.rs  channel.rs  channel_video.rs  client.rs  clientConfig.rs  client_config.rs  client_types.rs  community.rs  endpoints.rs  enums.rs  error.rs  filter.rs  misc.rs  mod.rs  playlist.rs  postData.rs  query_results.rs  search_channel.rs  search_playlist.rs  search_playlist_video.rs  search_video.rs  tab.rs  thumbnail.rs  video.rs  video_player.rs
