[package]
name = "youtubei-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0 license"
license-file = "LICENSE"
keywords = ["api", "youtube","innertube", "wrapper"]
repository = "https://github.com/11tuvork28/youtubei-rs"
readme = "README.md"
description = """
A asynchronous implementation of the invidious innertube aka youtubei API wrapper.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json","gzip"] }
tokio = { version = "1", features = ["full"] }