[package]
name = "youtubei-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0 license"
keywords = ["api", "youtube","innertube", "wrapper"]
repository = "https://github.com/11tuvork28/youtubei-rs"
readme = "README.md"
description = """
A asynchronous implementation of the invidious innertube aka youtubei API wrapper.
"""

[lib]
name = "youtubei_rs"
path = "src/lib.rs"
crate-type = ["lib"]
test = true

[dependencies]
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json","gzip"] }
tokio = { version = "1", features = ["full"] }